--- a/package.json
+++ b/package.json
@@ -26,30 +26,32 @@
   "dependencies": {
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "geist": "^1.0.0",
     "lucide-react": "^0.304.0",
     "next": "latest",
-    "postcss": "8.4.29",
+    "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.3"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
+    "autoprefixer": "10.4.15",
     "encoding": "^0.1.13",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
+    "postcss": "8.4.29",
     "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.10"
+    "prettier-plugin-tailwindcss": "^0.5.10",
+    "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.1.3"
   }
 }
