--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "format": "prettier --write .",
     "format-check": "prettier --check .",
     "type-check": "tsc --pretty --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@supabase/ssr": "latest",
@@ -38,6 +40,11 @@
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
@@ -46,6 +53,8 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "postcss": "8.4.29",
     "prettier": "^3.1.1",
