--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.3",
     "@tanstack/react-query": "^5.17.15",
     "@tanstack/react-query-devtools": "^5.17.15",
     "@vercel/analytics": "^1.1.1",
@@ -41,7 +41,7 @@
     "clsx": "^2.1.0",
     "geist": "^1.0.0",
     "lucide-react": "^0.304.0",
-    "next": "latest",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
     "react": "18.2.0",
