--- a/package.json
+++ b/package.json
@@ -13,24 +13,27 @@
     "test:headed": "playwright test --headed"
   },
   "dependencies": {
+    "@radix-ui/react-label": "2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/supabase-js": "^2.48.1",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "aos": "^3.0.0-beta.6",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "framer-motion": "^12.4.7",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "0.475.0",
     "next": "15.2.0",
+    "node-fetch": "3.3.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "5.5.0",
     "simplex-noise": "^4.0.3",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "3.0.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
