--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,10 @@ next-env.d.ts
 
 # Local Netlify folder
 .netlify
+
+# Puppeteer
+**/node_modules/puppeteer/
+**/node_modules/puppeteer-core/
+**/node_modules/@puppeteer/
+.netlify/plugins/node_modules/puppeteer/
+.netlify/plugins/node_modules/puppeteer-core/
