--- a/package.json
+++ b/package.json
@@ -64,13 +64,14 @@
     "eslint-config-next": "^14.2.24",
     "glob": "10.4.5",
     "next-sitemap": "^4.2.3",
-    "postcss": "^8.5.3",
-    "puppeteer": "24.3.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "purgecss": "7.0.2",
     "rollup": "^4.12.0",
     "rollup-plugin-postcss": "^4.0.2",
     "sharp": "^0.33.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.3.5",
     "typescript": "5.7.3"
   }
 }
