--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "framer-motion": "^12.4.7",
+    "lord-icon-element": "4.1.2",
+    "lottie-web": "5.12.2",
     "lucide-react": "0.475.0",
     "next": "15.2.0",
     "node-fetch": "3.3.2",
